sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort2.scala.error
AlgCocktailSort2:25: error: Int does not take parameters
				for(i <- 2 + incValue to getNombreValeurs() - incValue())
                                                                                      ^